--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "server": "nodemon ./server/app.js",
-    "localhost": "ng build && node ./server/app.js",
+    "localhost": "ng build --prod --output-path dist --base-href / && nodemon ./server/app.js",
     "start": "node server/app.js",
     "build": "ng build",
     "test": "ng test",
